--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/@angular/material/prebuilt-themes/azure-blue.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-mdc-snack-bar-container {
+    --mat-mdc-snack-bar-button-color: #fff;
+    --mdc-snackbar-supporting-text-color: #fff;
+    &.background-success  {
+      --mdc-snackbar-container-color: #00c851;
+    }
+    &.background-warning  {
+      --mdc-snackbar-container-color: #ff9800;
+    }
+    &.background-danger  {
+      --mdc-snackbar-container-color: #f44336;
+    }
+}
+
+.color-primary{
+  color: #005cbb!important;
+}
+  
